--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,7 @@ library:
   - base >= 4.12.0.0 && < 4.16
   - nri-prelude >= 0.1.0.0 && < 0.7
   - text >= 1.2.3.1 && < 1.3
+  - haskell-src-exts >= 1.23.1 && < 1.24
   # exposed-modules:
   # - Http
   # - Http.Mock
@@ -27,6 +28,7 @@ tests:
     - base >= 4.12.0.0 && < 4.16
     - nri-prelude >= 0.1.0.0 && < 0.7
     - text >= 1.2.3.1 && < 1.3
+    - haskell-src-exts >= 1.23.1 && < 1.24
     main: Main.hs
     source-dirs:
     - src
