--- a/package.yaml
+++ b/package.yaml
@@ -11,6 +11,7 @@ category: Web
 extra-source-files:
   - README.md
   - LICENSE
+  - "test/golden-results/*"
 library:
   dependencies:
   - base >= 4.12.0.0 && < 4.16
