--- a/package.yaml
+++ b/package.yaml
@@ -18,9 +18,10 @@ library:
   - nri-prelude >= 0.1.0.0 && < 0.7
   - text >= 1.2.3.1 && < 1.3
   - haskell-src-exts >= 1.23.1 && < 1.24
-  # exposed-modules:
-  # - Http
-  # - Http.Mock
+  - hint >= 0.9.0.4 && < 0.10
+  exposed-modules:
+  - Haskell.Verified.Examples
+  - Haskell.Verified.Examples.RunTime
   source-dirs: src
 tests:
   spec:
@@ -30,6 +31,7 @@ tests:
     - nri-prelude >= 0.1.0.0 && < 0.7
     - text >= 1.2.3.1 && < 1.3
     - haskell-src-exts >= 1.23.1 && < 1.24
+    - hint >= 0.9.0.4 && < 0.10
     main: Main.hs
     source-dirs:
     - src
