--- a/package.yaml
+++ b/package.yaml
@@ -12,6 +12,7 @@ extra-source-files:
   - README.md
   - LICENSE
   - "test/golden-results/*"
+  - "test/assets/*"
 library:
   dependencies:
   - base >= 4.12.0.0 && < 4.16
