Change result of example to include expected and actual values

--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,7 @@ library:
   exposed-modules:
   - Haskell.Verified.Examples
   - Haskell.Verified.Examples.RunTime
+  - Haskell.Verified.Examples.Verified
   source-dirs: src
 tests:
   spec:
