--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ tests:
     dependencies:
     - aeson >= 1.4.6.0 && < 1.6
     - base >= 4.12.0.0 && < 4.16
+    - directory >= 1.3.6.0 && < 1.4
     - nri-prelude >= 0.1.0.0 && < 0.7
     - text >= 1.2.3.1 && < 1.3
     - haskell-src-exts >= 1.23.1 && < 1.24
