--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,19 @@ extra-source-files:
   - LICENSE
   - "test/golden-results/*"
   - "test/assets/*"
+executables:
+  haskell-verify-examples:
+    dependencies:
+      - base >= 4.12.0.0 && < 4.16
+      - directory >= 1.3.6.0 && < 1.7
+      - filemanip >= 0.3.6.3 && < 0.3.7
+      - haskell-src-exts >= 1.23.1 && < 1.24
+      - haskell-verified-examples
+      - hint >= 0.9.0.4 && < 0.10
+      - nri-prelude >= 0.1.0.0 && < 0.7
+      - text >= 1.2.3.1 && < 1.3
+    main: Main.hs
+    source-dirs: app
 library:
   dependencies:
   - base >= 4.12.0.0 && < 4.16
