Make RunTime and Verified data-files so we can access them when installed Also make them standard Prelude only so they can be loaded without NriPrelude

--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,9 @@ extra-source-files:
   - LICENSE
   - "test/golden-results/*"
   - "test/assets/*"
+data-files:
+  - src/Haskell/Verified/Examples/RunTime.hs
+  - src/Haskell/Verified/Examples/Verified.hs
 executables:
   haskell-verify-examples:
     dependencies:
