--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ library:
   - nri-prelude >= 0.1.0.0 && < 0.7
   - text >= 1.2.3.1 && < 1.3
   - haskell-src-exts >= 1.23.1 && < 1.24
+  - hie-bios >= 0.7.5 && < 0.8
   - hint >= 0.9.0.4 && < 0.10
   exposed-modules:
   - Haskell.Verified.Examples
@@ -49,12 +50,14 @@ tests:
     - directory >= 1.3.6.0 && < 1.4
     - nri-prelude >= 0.1.0.0 && < 0.7
     - text >= 1.2.3.1 && < 1.3
+    - hie-bios >= 0.7.5 && < 0.8
     - haskell-src-exts >= 1.23.1 && < 1.24
     - hint >= 0.9.0.4 && < 0.10
     main: Main.hs
     source-dirs:
     - src
     - test
+    - test/assets
     # We intentionally do not add threaded ghc-options for tests. These would
     # cause tests to run in parallel, which introduces flakiness in this test
     # suite. The suite creates a number of web servers that are supposed to get
@@ -78,7 +81,6 @@ default-extensions:
   - ExtendedDefaultRules
   - NumericUnderscores
 ghc-options:
-  - -Wall
   - -Wcompat
   - -Widentities
   - -Wincomplete-record-updates
