--- a/package.yaml
+++ b/package.yaml
@@ -11,8 +11,6 @@ category: Web
 extra-source-files:
   - README.md
   - LICENSE
-  - "test/golden-results/*"
-  - "test/assets/*"
 data-files:
   - src/Haskell/Verified/Examples/RunTime.hs
   - src/Haskell/Verified/Examples/Verified.hs
@@ -20,7 +18,7 @@ executables:
   haskell-verify-examples:
     dependencies:
       - base >= 4.12.0.0 && < 4.16
-      - directory >= 1.3.6.0 && < 1.7
+      - directory >= 1.3.6.0 && < 1.4
       - filemanip >= 0.3.6.3 && < 0.3.7
       - haskell-src-exts >= 1.23.1 && < 1.24
       - haskell-verified-examples
@@ -31,12 +29,20 @@ executables:
     source-dirs: app
 library:
   dependencies:
+  - async >= 2.2.2 && < 2.3
   - base >= 4.12.0.0 && < 4.16
-  - nri-prelude >= 0.1.0.0 && < 0.7
-  - text >= 1.2.3.1 && < 1.3
+  - bytestring >= 0.10 && < 0.11
+  - directory >= 1.3.6.0 && < 1.4
+  - filepath >= 1.4 && < 1.5
   - haskell-src-exts >= 1.23.1 && < 1.24
   - hie-bios >= 0.7.5 && < 0.8
   - hint >= 0.9.0.4 && < 0.10
+  - nri-prelude >= 0.1.0.0 && < 0.7
+  - pretty-diff >= 0.4.0.2 && < 0.5
+  - pretty-show >= 1.9.5 && < 1.11
+  - safe-coloured-text >= 0.0.0.0 && < 0.1
+  - terminal-size >= 0.3.2.1 && < 0.4
+  - text >= 1.2.3.1 && < 1.3
   exposed-modules:
   - Haskell.Verified.Examples
   - Haskell.Verified.Examples.RunTime
@@ -46,18 +52,24 @@ tests:
   spec:
     dependencies:
     - aeson >= 1.4.6.0 && < 1.6
+    - async >= 2.2.2 && < 2.3
     - base >= 4.12.0.0 && < 4.16
+    - bytestring >= 0.10 && < 0.11
     - directory >= 1.3.6.0 && < 1.4
-    - nri-prelude >= 0.1.0.0 && < 0.7
-    - text >= 1.2.3.1 && < 1.3
-    - hie-bios >= 0.7.5 && < 0.8
+    - filepath >= 1.4 && < 1.5
     - haskell-src-exts >= 1.23.1 && < 1.24
+    - hie-bios >= 0.7.5 && < 0.8
     - hint >= 0.9.0.4 && < 0.10
+    - nri-prelude >= 0.1.0.0 && < 0.7
+    - pretty-diff >= 0.4.0.2 && < 0.5
+    - pretty-show >= 1.9.5 && < 1.11
+    - safe-coloured-text >= 0.0.0.0 && < 0.1
+    - terminal-size >= 0.3.2.1 && < 0.4
+    - text >= 1.2.3.1 && < 1.3
     main: Main.hs
     source-dirs:
     - src
     - test
-    - test/assets
     # We intentionally do not add threaded ghc-options for tests. These would
     # cause tests to run in parallel, which introduces flakiness in this test
     # suite. The suite creates a number of web servers that are supposed to get
