Move eval to handler

--- a/package.yaml
+++ b/package.yaml
@@ -82,6 +82,7 @@ default-extensions:
   - FlexibleContexts
   - FlexibleInstances
   - GeneralizedNewtypeDeriving
+  - LambdaCase
   - MultiParamTypeClasses
   - NamedFieldPuns
   - NoImplicitPrelude
