--- a/package.yaml
+++ b/package.yaml
@@ -41,6 +41,7 @@ library:
   - pretty-diff >= 0.4.0.2 && < 0.5
   - pretty-show >= 1.9.5 && < 1.11
   - safe-coloured-text >= 0.0.0.0 && < 0.1
+  - safe-exceptions >= 0.1.7 && < 0.1.8
   - terminal-size >= 0.3.2.1 && < 0.4
   - text >= 1.2.3.1 && < 1.3
   exposed-modules:
@@ -64,6 +65,7 @@ tests:
     - pretty-diff >= 0.4.0.2 && < 0.5
     - pretty-show >= 1.9.5 && < 1.11
     - safe-coloured-text >= 0.0.0.0 && < 0.1
+    - safe-exceptions >= 0.1.7 && < 0.1.8
     - terminal-size >= 0.3.2.1 && < 0.4
     - text >= 1.2.3.1 && < 1.3
     main: Main.hs
