--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,7 @@ library:
   - pretty-show >= 1.9.5 && < 1.11
   - safe-coloured-text >= 0.0.0.0 && < 0.1
   - safe-exceptions >= 0.1.7 && < 0.1.8
+  - temporary >= 1.3 && < 1.4
   - terminal-size >= 0.3.2.1 && < 0.4
   - text >= 1.2.3.1 && < 1.3
   exposed-modules:
@@ -68,6 +69,7 @@ tests:
     - pretty-show >= 1.9.5 && < 1.11
     - safe-coloured-text >= 0.0.0.0 && < 0.1
     - safe-exceptions >= 0.1.7 && < 0.1.8
+    - temporary >= 1.3 && < 1.4
     - terminal-size >= 0.3.2.1 && < 0.4
     - text >= 1.2.3.1 && < 1.3
     main: Main.hs
