--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ executables:
       - hint >= 0.9.0.4 && < 0.10
       - nri-prelude >= 0.1.0.0 && < 0.7
       - text >= 1.2.3.1 && < 1.3
+      - cmdargs >= 0.10.21 && < 0.11
     main: Main.hs
     source-dirs: app
 library:
