--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,7 @@ executables:
       - haskell-verify-examples
       - hint >= 0.9.0.4 && < 0.10
       - nri-prelude >= 0.1.0.0 && < 0.7
+      - optparse-applicative >= 0.16.1.0 && < 0.17
       - text >= 1.2.3.1 && < 1.3
     main: Main.hs
     source-dirs: app
