--- a/package.yaml
+++ b/package.yaml
@@ -17,6 +17,7 @@ data-files:
 executables:
   haskell-verify-examples:
     dependencies:
+      - conduit >= 1.3.4.1 && < 1.4
       - filemanip >= 0.3.6.3 && < 0.3.7
       - optparse-applicative >= 0.16.1.0 && < 0.17
       - async >= 2.2.2 && < 2.3
@@ -43,6 +44,7 @@ executables:
       - src
   generate-documentation:
     dependencies:
+      - conduit >= 1.3.4.1 && < 1.4
       - async >= 2.2.2 && < 2.3
       - base >= 4.12.0.0 && < 4.16
       - bytestring >= 0.10 && < 0.11
@@ -67,6 +69,7 @@ executables:
       - src
 library:
   dependencies:
+  - conduit >= 1.3.4.1 && < 1.4
   - async >= 2.2.2 && < 2.3
   - base >= 4.12.0.0 && < 4.16
   - bytestring >= 0.10 && < 0.11
@@ -93,6 +96,7 @@ library:
 tests:
   spec:
     dependencies:
+    - conduit >= 1.3.4.1 && < 1.4
     - aeson >= 1.4.6.0 && < 1.6
     - async >= 2.2.2 && < 2.3
     - base >= 4.12.0.0 && < 4.16
